--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Герой -->
   <section id="studio">
     <h1>Эффективные решения для вашего бизнеса</h1>
-    <a href="">Заказать услугу</a>
+    <input type="button" value="Заказать услугу">
   </section>
   <!--Особенности-->
   <section>
@@ -90,7 +90,7 @@
   </section>
 </main>
 <footer>
-  <p>WebStudio</p>
+  <a href="#studio">WebStudio</a>
   <address>
     г.Киев, пр-т Леси Украинки, 26
     <a href="mailto:info@example.com">info@example.com</a>
