--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   <section id="portfolio">
     <h2>Чем мы занимаемся</h2>
     <ul>
-      <li><a href=""><img src="./images/box1.png" width="370" alt="Человек печатает"></a></li>
-      <li><a href=""><img src="./images/img.png" width="370" alt="Человек смотрит в экран телефона"></a></li>
-      <li><a href=""><img src="./images/img(1).png" width="370" alt="Человек смотрит в экран планшета"></a></li>
+      <li><a href=""><img src="./images/7.jpg" width="370" alt="Человек печатает"></a></li>
+      <li><a href=""><img src="./images/1.jpg" width="370" alt="Человек смотрит в экран телефона"></a></li>
+      <li><a href=""><img src="./images/2.jpg" width="370" alt="Человек смотрит в экран планшета"></a></li>
     </ul>
   </section>
   <!-- Команда -->
@@ -67,22 +67,22 @@
     <h2>Наша команда</h2>
     <ul>
       <li>
-        <img src="./images/img(2).png" width="270" alt="Сотрудник компании">
+        <img src="./images/3.jpg" width="270" alt="Сотрудник компании">
         <h3>Игорь Демьяненко</h3>
         <p>Product Designer</p>
       </li>
       <li>
-        <img src="./images/img(3).png" width="270" alt="Сотрудник компании">
+        <img src="./images/4.jpg" width="270" alt="Сотрудник компании">
         <h3>Ольга Репина</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
-        <img src="./images/img(4).png" width="270" alt="Сотрудник компании">
+        <img src="./images/5.jpg" width="270" alt="Сотрудник компании">
         <h3>Николай Тарасов</h3>
         <p>Marketing</p>
       </li>
       <li>
-        <img src="images/img(5).png" width="270" alt="Сотрудник компании">
+        <img src="images/6.jpg" width="270" alt="Сотрудник компании">
         <h3>Михаил Ермаков</h3>
         <p>UI Designer</p>
       </li>
