--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <header>
   <!-- Навигация -->
   <nav>
-    <a href="#studio">WebStudio</a>
+    <a href="">WebStudio</a>
     <ul>
-      <li><a href="#studio">Студия</a></li>
-      <li><a href="#portfolio">Портфолио</a></li>
-      <li><a href="#team">Контакты</a></li>
+      <li><a href="">Студия</a></li>
+      <li><a href="">Портфолио</a></li>
+      <li><a href="">Контакты</a></li>
     </ul>
   </nav>
   <!-- Контакты -->
@@ -27,7 +27,7 @@
 </header>
 <main>
   <!-- Герой -->
-  <section id="studio">
+  <section>
     <h1>Эффективные решения для вашего бизнеса</h1>
     <input type="button" value="Заказать услугу">
   </section>
@@ -54,7 +54,7 @@
     </ul>
   </section>
   <!-- Направление -->
-  <section id="portfolio">
+  <section>
     <h2>Чем мы занимаемся</h2>
     <ul>
       <li><a href=""><img src="./images/7.jpg" width="370" alt="Человек печатает"></a></li>
@@ -63,7 +63,7 @@
     </ul>
   </section>
   <!-- Команда -->
-  <section id="team">
+  <section>
     <h2>Наша команда</h2>
     <ul>
       <li>
@@ -90,7 +90,7 @@
   </section>
 </main>
 <footer>
-  <a href="#studio">WebStudio</a>
+  <a href="">WebStudio</a>
   <address>
     г.Киев, пр-т Леси Украинки, 26
     <a href="mailto:info@example.com">info@example.com</a>
