--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Герой -->
   <section>
     <h1>Эффективные решения для вашего бизнеса</h1>
-    <input type="button" value="Заказать услугу">
+    <button type="button">Заказать услугу</button>
   </section>
   <!--Особенности-->
   <section>
@@ -92,7 +92,7 @@
 <footer>
   <a href="">WebStudio</a>
   <address>
-    г.Киев, пр-т Леси Украинки, 26
+    <a href="">г.Киев, пр-т Леси Украинки, 26</a>
     <a href="mailto:info@example.com">info@example.com</a>
     <a href="tel:+380991111111">+380991111111</a>
   </address>
